# fundoshi

./: .build.yml  .flake8  .gitignore  .travis.yml  LICENSE  LICENSE.txt  Makefile  README.mkd  README.rst  cipublish.py  citests.sh  nosetests.py  pyproject.toml  requirements-dev.txt  requirements-travis.txt  requirements.txt  setup.cfg  setup.py  test_cache.sqlite
docs/: Makefile  conf.py  dev.rst  doctest_cassette.yml  faq.rst  index.rst  usage.rst
fundoshi/: __init__.py  api.py  classes.py  exceptions.py  main.py
fundoshi/sites/: __init__.py  basesite.py  kissmanga.py  mangadex.py  mangapanda.py  utils.py
fundoshi/sites/kissmanga/: decoder.py  main.py
fundoshi/tests/: __init__.py  common.py  test_kissmanga.py  test_mangadex.py  test_mangapanda.py
fundoshi/tests/cassettes/: MangadexTestCase.test_scrape_chapter.yaml  MangadexTestCase.test_scrape_title.yaml  TestKissmangaChapter.test_first_chapter.yaml  TestKissmangaChapter.test_last_chapter.yaml  TestKissmangaChapter.test_middle_chapter.yaml  TestKissmangaSearchByAuthor.test_normal_author.yaml  TestKissmangaSearchSeries.test_beelzebub_search.yaml  TestKissmangaSearchSeries.test_no_result_search.yaml  TestKissmangaSeries.test_completed_series.yaml  TestMangapandaChapter.test_first_chapter.yaml  TestMangapandaChapter.test_last_chapter.yaml  TestMangapandaChapter.test_middle_chapter.yaml  TestMangapandaSearchSeries.test_beelzebub_search.yaml  TestMangapandaSearchSeries.test_no_result_search.yaml  TestMangapandaSeries.test_completed_series.yaml
